Fixed UI issue with mousescroll not working (disabled overflow-hidden). Fixed UI issue with view images/panorama buttons being clickable on loading screen. Fixed UI issue with trackerbar not displaying properly upon new searches. Fixed font issue with font not working on some browsers (font is now Verdana; subject to change).

--- a/global.css
+++ b/global.css
@@ -1,6 +1,6 @@
 html {
     height: 100% ;
-    font-family: "Open Sans";
+    font-family: "Verdana";
 }
 body { 
     position: relative;
@@ -8,7 +8,7 @@ body {
     width: 100%;
     margin: 0; 
     padding: 0; 
-    overflow-y: hidden;
+    /*overflow-y: hidden;*/
     /*background: linear-gradient(#999, #666);*/
 }
 #container{
